// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareDrawer renders a closed drawer 1`] = `
<div
  className="ui-drawer ui-drawer--secondary share-drawer"
  id=""
  style={
    Object {
      "height": "calc(100% - 0)",
      "top": "0",
      "width": "380px",
    }
  }
>
  <div
    className="ui-drawer__container"
  >
    <div
      className="ui-drawer__body"
    >
      <div
        className="ui-drawer__title"
      >
        <div
          className="ui-drawer__title__close-button"
        >
          <a
            aria-label="Back"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              className="ui-icon"
              height="16px"
              id=""
              style={
                Object {
                  "display": "inline-block",
                  "fill": "#506784",
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 24 32"
              width="16px"
            >
              <path
                d="M20.911 5.375l-9.482 9.482 9.482 9.482q0.339 0.339 0.339 0.804t-0.339 0.804l-2.964 2.964q-0.339 0.339-0.804 0.339t-0.804-0.339l-13.25-13.25q-0.339-0.339-0.339-0.804t0.339-0.804l13.25-13.25q0.339-0.339 0.804-0.339t0.804 0.339l2.964 2.964q0.339 0.339 0.339 0.804t-0.339 0.804z"
              />
            </svg>
          </a>
        </div>
      </div>
      <h4
        className="share-drawer__header"
      >
        Share 4 Organizations
      </h4>
      <mock-share-form />
      <ul
        className="share-drawer-list"
      >
        <li
          className="share-drawer-list-item"
        >
          Group 1
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 2
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 3
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 4
        </li>
      </ul>
    </div>
    <div
      className="ui-drawer__close-btn share-drawer"
    >
      <a
        aria-label="Close"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="ui-icon"
          height="14px"
          id=""
          style={
            Object {
              "display": "inline-block",
              "fill": "#B7D2E5",
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 21 21"
          width="14px"
        >
          <g>
            <path
              d="M2.592.044l18.364 18.364-2.548 2.548L.044 2.592z"
            />
            <path
              d="M0 18.364L18.364 0l2.548 2.548L2.548 20.912z"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`ShareDrawer renders an open drawer with correct header based on group length 1`] = `
<div
  className="ui-drawer ui-drawer--secondary ui-drawer--opened share-drawer"
  id=""
  style={
    Object {
      "height": "calc(100% - 0)",
      "top": "0",
      "width": "380px",
    }
  }
>
  <div
    className="ui-drawer__container"
  >
    <div
      className="ui-drawer__body"
    >
      <div
        className="ui-drawer__title"
      >
        <div
          className="ui-drawer__title__close-button"
        >
          <a
            aria-label="Back"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              className="ui-icon"
              height="16px"
              id=""
              style={
                Object {
                  "display": "inline-block",
                  "fill": "#506784",
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 24 32"
              width="16px"
            >
              <path
                d="M20.911 5.375l-9.482 9.482 9.482 9.482q0.339 0.339 0.339 0.804t-0.339 0.804l-2.964 2.964q-0.339 0.339-0.804 0.339t-0.804-0.339l-13.25-13.25q-0.339-0.339-0.339-0.804t0.339-0.804l13.25-13.25q0.339-0.339 0.804-0.339t0.804 0.339l2.964 2.964q0.339 0.339 0.339 0.804t-0.339 0.804z"
              />
            </svg>
          </a>
        </div>
      </div>
      <h4
        className="share-drawer__header"
      >
        Share 1 Organization
      </h4>
      <mock-share-form />
      <ul
        className="share-drawer-list"
      >
        <li
          className="share-drawer-list-item"
        >
          Group 1
        </li>
      </ul>
    </div>
    <div
      className="ui-drawer__close-btn ui-drawer__close-btn--opened share-drawer"
    >
      <a
        aria-label="Close"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="ui-icon"
          height="14px"
          id=""
          style={
            Object {
              "display": "inline-block",
              "fill": "#B7D2E5",
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 21 21"
          width="14px"
        >
          <g>
            <path
              d="M2.592.044l18.364 18.364-2.548 2.548L.044 2.592z"
            />
            <path
              d="M0 18.364L18.364 0l2.548 2.548L2.548 20.912z"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`ShareDrawer renders an open drawer with header and group list 1`] = `
<div
  className="ui-drawer ui-drawer--secondary ui-drawer--opened share-drawer"
  id=""
  style={
    Object {
      "height": "calc(100% - 0)",
      "top": "0",
      "width": "380px",
    }
  }
>
  <div
    className="ui-drawer__container"
  >
    <div
      className="ui-drawer__body"
    >
      <div
        className="ui-drawer__title"
      >
        <div
          className="ui-drawer__title__close-button"
        >
          <a
            aria-label="Back"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              className="ui-icon"
              height="16px"
              id=""
              style={
                Object {
                  "display": "inline-block",
                  "fill": "#506784",
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 24 32"
              width="16px"
            >
              <path
                d="M20.911 5.375l-9.482 9.482 9.482 9.482q0.339 0.339 0.339 0.804t-0.339 0.804l-2.964 2.964q-0.339 0.339-0.804 0.339t-0.804-0.339l-13.25-13.25q-0.339-0.339-0.339-0.804t0.339-0.804l13.25-13.25q0.339-0.339 0.804-0.339t0.804 0.339l2.964 2.964q0.339 0.339 0.339 0.804t-0.339 0.804z"
              />
            </svg>
          </a>
        </div>
      </div>
      <h4
        className="share-drawer__header"
      >
        Share 4 Organizations
      </h4>
      <mock-share-form />
      <ul
        className="share-drawer-list"
      >
        <li
          className="share-drawer-list-item"
        >
          Group 1
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 2
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 3
        </li>
        <li
          className="share-drawer-list-item"
        >
          Group 4
        </li>
      </ul>
    </div>
    <div
      className="ui-drawer__close-btn ui-drawer__close-btn--opened share-drawer"
    >
      <a
        aria-label="Close"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="ui-icon"
          height="14px"
          id=""
          style={
            Object {
              "display": "inline-block",
              "fill": "#B7D2E5",
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 21 21"
          width="14px"
        >
          <g>
            <path
              d="M2.592.044l18.364 18.364-2.548 2.548L.044 2.592z"
            />
            <path
              d="M0 18.364L18.364 0l2.548 2.548L2.548 20.912z"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;
